2.0.3
=====
- Modified behaviour of th:method in <form> tags so that it controls whether the selected method
  is supported by browsers (get, post) or not. If not, it creates a hidden input field inside the
  form (named '_method') with the original value and sets the method to 'post'. This mirrors the
  behaviour of Spring's FormTag class (Spring taglib's "<form:form>" tag).


2.0.2
=====
- (No changes)


2.0.1
=====
- Fixed incorrect exception messages.


2.0.0
=====
- Created version "3" of the standard DTDs for XHTML template validation, including the
  new th:switch and th:case attributes. 
- Adapted processors to the new DOM/IProcessor infrastructure.


1.1.4
=====
- Solved bug regarding evaluation of the same SpEL expression two times over two objects
  of different classes. Spring AST infrastructure was caching PropertyAccessors and this
  caused ClassCastExceptions. This error appeared on 1.1.3 because of the introduction of
  SpEL expression caching.
  

1.1.3
=====
- Modified SpringWebContext constructors so that they require now the ServletContex 
  object. This enables Thymeleaf to operate without depending at all
  on creating an HTTP session object for the user executing the template.
- Created cache for SpEL evaluation and optimized use of SpEL contexts.


1.1.2
=====
- Fixed: potential case-sensitivity problem in select tags.
- Fixed: bad initialization of th:field on option tags contained within <optgroup>


1.1.1
=====
- Fixed: avoid non-minimizable tags like <script>, <textarea>, <div>, etc. to be
  minimized (appear as <script />, <textarea />, div /> without an end tag).


1.1.0
=====
- Deprecated IValueProcessor interface and related all infrastructure. 
- Created new versions (v2) of the set of thymeleaf-spring3-specific XHTML DTDs, including 
  the new "th:substituteby" attribute:
    * http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring3-2.dtd
    * http://www.thymeleaf.org/dtd/xhtml1-transitional-thymeleaf-spring3-2.dtd